[metadata]
description-file = README.md

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./hasy_tools --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --flake8 --ignore=docs/ --durations=3
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
ignore = D104, D105, D107, D301, D413, D203, D212, D100, E402
match_dir = hasy_tools

[flake8]
ignore = E402
