[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = hasy_tools

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

# keep this consistent with _version.py
version = 0.1.1

description = Convenience functions for the HASY dataset
long_description = file: README.md
long_description_content_type = text/markdown

platforms = Linux

url = https://github.com/MartinThoma/hasy_tools
download_url = https://github.com/MartinThoma/hasy_tools

license = MIT

keywords =
    Machine Learning
    Data Science
    classifiers
    Classification
    utility

classifiers =
    Development Status :: 7 - Inactive
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Utilities

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Pillow
    scikit-learn
    matplotlib

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./hasy_tools --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --ignore=docs/ --durations=3
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
ignore = D104, D105, D107, D301, D413, D203, D212, D100, E402
match_dir = hasy_tools

[flake8]
ignore = E402
